Attempting to fix bug that causes buttons to be invisible on mobile devices

--- a/app/client/stylesheets/styles.css
+++ b/app/client/stylesheets/styles.css
@@ -152,23 +152,30 @@ body {
 }
 
 #buttons {
-    transform: translateX(-50%);
-    position: fixed;
     z-index: 2;
-    left: 50%;
-    bottom: 5%;
-    width: 60%;
+    margin: 0 auto;
+    place-content: center;
+    min-width: calc(8rem * 3);
+    max-width: 60%;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: repeat(3, 1fr);
     font-size: medium;
     font-weight: 600; /* semibold */
     place-items: center;
     gap: calc(var(--spacing) * 2);
+    overflow-x: scroll;
+    box-sizing: border-box; 
     > div.pill {
-        width: 80%;
+        min-width: 8rem;
+        padding: 1rem;
+        height: 100%;
+        box-sizing: border-box;
     }
     &.hide {
         display: none;
+    }
+    &.wrap {
+      grid-template-columns: 1fr;
     }
 }
 
